fix: truncate repo name(7ch by default) in small screen
do not hide repo header

--- a/src/main/frontend/components/header.css
+++ b/src/main/frontend/components/header.css
@@ -85,3 +85,14 @@
     align-items: center;
   }
 }
+
+
+#repo-name {
+    @apply md:max-w-none;
+    vertical-align: middle;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 7ch;
+}
